--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
     environment {
         DEV_PROJECT = "ludmila-bogucharska-books-dev"
         STAGE_PROJECT = "ludmila-bogucharska-books-stage"
-        APP_GIT_URL = "https://github.com/ludmila-bogucharska/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/nodejs"
+        APP_GIT_URL = "https://github.com/ludmilabogucharska/DO288-apps"
+        NEXUS_SERVER = "http://nexus-common.apps.ocp-na2.prod.nextcle.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
